<resources>
    <string name="app_name" translatable="false">SmartTraining</string>

    <!-- BOTTOM NAVIGATION VIEW !-->
    <string name="bottom_navigation_menu_arbitration">Arbitrage</string>
    <string name="bottom_navigation_menu_history">Historique</string>

    <string name="arbitration_title">Arbitrage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="history_title">Historique</string>

    <array name="sportNameList">
        <item>Badminton</item>
        <item>Basket-ball</item>
        <item>Crossfit</item>
        <item>Escalade</item>
        <item>Futsal</item>
        <item>Handball</item>
        <item>Tennis</item>
        <item>Ultimate</item>
        <item>Volleyball</item>
    </array>

    <array name="sportImageList">
        <item>badminton_background</item>
        <item>basketball_background</item>
        <item>crossfit_background</item>
        <item>escalade_background</item>
        <item>futsal_background</item>
        <item>handball_background</item>
        <item>tennis_background</item>
        <item>historique_background</item>
        <item>volleyball_background</item>
    </array>

    <array name="sportIconList">
        <item>ic_badminton</item>
        <item>ic_basketball</item>
        <item>ic_crossfit</item>
        <item>ic_escalade</item>
        <item>ic_futsal</item>
        <item>ic_handball</item>
        <item>ic_tennis</item>
        <item>ic_ultimate</item>
        <item>ic_volleyball</item>
    </array>

    <!-- FONT ID -->
    <string name="Roboto_Bold" translatable="false">Roboto-Bold</string>
    <string name="Roboto_Medium" translatable="false">Roboto-Medium</string>
    <string name="Roboto_Light" translatable="false">Roboto-Light</string>
    <string name="Roboto_Thin" translatable="false">Roboto-Thin</string>

    <!-- SCROLLER -->
    <string name="apply">Appliquer</string>

    <!-- BADMINTON CONFIG -->
    <string name="game_mode">Mode de jeu</string>
    <string name="set_number">Sets gagnants</string>
    <string name="set_point">Point par set</string>
    <string name="set_point_max">Point maximum</string>
    <string name="team_1">Equipe 1 :</string>
    <string name="team_2">Equipe 2 :</string>
    <string name="player_1">Joueur 1</string>
    <string name="player_2">Joueur 2</string>
    <string name="play_button">Jouer</string>
    <string name="simple_mode">SIMPLE</string>
    <string name="double_mode">DOUBLE</string>

    <!-- BADMINTON MATCH -->
    <string name="zero">0</string>
    <string name="chronometer_init">00:00</string>
    <string name="player_display">%1$s - %2$s</string>


    <!-- BADMINTON DETAILS -->
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="end_match">Fin du match !</string>
    <string name="period_value">%1$d min</string>
    <string name="badminton_winner_declaration_simple">%1$s gagne %2$d set à %3$d !</string>
    <string name="badminton_winner_declaration_double">%1$s et %2$s gagnent %3$d set à %4$d !</string>
    <string name="set_details">Détail des set(s) :</string>
    <string name="save_match_question">Voulez vous sauvegarder ce match ?</string>
    <string name="badminton_details_score">%1$s\u0009\u0009\u0009\u0009%2$s\u0009\u0009\u0009\u0009%3$s</string>

    <!-- BASKET CONFIG -->


    <!-- HISTORY ADAPTER -->
    <string name="adapter_date">Date</string>
    <string name="VS">Vs</string>
    <string name="captain_1">Capitaine_1</string>
    <string name="captain_2">Capitaine_2</string>
    <string name="match_score">Score du match</string>
    <string name="period">Period : %1$d min</string>
    <string name="TM_period">Durée du Temps Mort : %1$d min</string>
    <string name="undefined_score">%1$s/%2$s</string>
    <string name="nb_set_gagnant">Nombre de set gagnant : %1$d</string>
    <string name="point_par_set_historique">Point par set : %1$d</string>
    <string name="point_max_par_set">Point max par set : %1$d</string>

    <string name="display_players">Afficher les joueurs</string>
    <string name="period_duration">Durée d\'une période</string>
    <string name="nb_players_team">Nombre de joueur par équipe</string>
    <string name="team1_name">Nom de l\'équipe 1</string>
    <string name="team2_name">Nom de l\'équipe 2</string>


</resources>