<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/adapter_cardview_margin"
    android:layout_marginTop="@dimen/adapter_cardview_margin"
    android:layout_marginRight="@dimen/adapter_cardview_margin"
    app:cardBackgroundColor="@color/secondaryColor"
    app:cardCornerRadius="@dimen/adapter_cardview_radius"
    app:cardElevation="@dimen/adapter_cardview_elevation"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.example.smarttraining.Views.TextViewRoboto
                android:id="@+id/ultimate_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/adapter_text_padding"
                android:text="@string/adapter_date"
                android:textColor="@color/primaryTextColor"
                app:fontName="Roboto_Bold" />

            <ImageView
                android:id="@+id/ultimate_delete_ic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:scaleType="center"
                android:src="@drawable/ic_delete_white_24"
                app:tint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.example.smarttraining.Views.TextViewRoboto
                        android:id="@+id/ultimate_equipe1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_1"
                        android:textColor="@color/primaryTextColor" />

                    <com.example.smarttraining.Views.TextViewRoboto
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/VS"
                        android:textColor="@color/primaryTextColor" />

                    <com.example.smarttraining.Views.TextViewRoboto
                        android:id="@+id/ultimate_equipe2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/team_2"
                        android:textColor="@color/primaryTextColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.example.smarttraining.Views.TextViewRoboto
                        android:id="@+id/ultimate_capitaine1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/captain_1"
                        android:textColor="@color/primaryTextColor"
                        app:fontName="Roboto_Thin" />

                    <com.example.smarttraining.Views.TextViewRoboto
                        android:id="@+id/ultimate_capitaine2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/captain_2"
                        android:textColor="@color/primaryTextColor"
                        app:fontName="Roboto_Thin" />

                </LinearLayout>

            </LinearLayout>

            <com.example.smarttraining.Views.TextViewRoboto
                android:id="@+id/ultimate_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/match_score"
                android:textColor="@color/primaryTextColor" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>